services/hastebin/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: hastebin
spec:
  finalizers:
  - kubernetes
status:
  phase: Active
